fix: add scrollbar

--- a/src/app/features/manual/manual-renderer/manual-renderer.component.scss
+++ b/src/app/features/manual/manual-renderer/manual-renderer.component.scss
@@ -36,3 +36,13 @@
     will-change: background-position;
   }
 }
+.example-viewport {
+  height: 100%;
+  width: 100%;
+  direction: rtl;
+}
+
+.example-item {
+  margin: 0.5rem;
+  direction: ltr;
+}
